--- a/games.html
+++ b/games.html
@@ -19,6 +19,7 @@
     <button onclick='window.location.href = "games.html";'><span class="material-symbols-outlined">home</span></button>
     <button style = "height: 50px;" onclick='window.location.href = "tc.html";'><span class="material-symbols-outlined">gavel</span></button>
     <button onclick='window.location.href = "report.html";'><span class="material-symbols-outlined">bug_report</span></button>
+    <button onclick='window.location.href = "game_list.html";'><span class="material-symbols-outlined">stadia_controller</span></button>
     <hr>
 
   </div>
