--- a/games.html
+++ b/games.html
@@ -51,7 +51,8 @@
         <br>
         <br>
         <h1>All</h1>
-        <input style="text-align: center;" type="text" id="searchInput" name = "search" onkeyup="searchGames()" onclick="window.location.href = 'search.html'" placeholder="Search for a game..." disabled>
+        <input style="text-align: center;" type="text" id="searchInput" name = "search" onkeyup="searchGames()"  placeholder="Seach not working" disabled>
+        <button onclick="window.location.href = 'search.html'">Click here to seach</button>
         <hr>
         <div id="buttonsContainer">
           <!-- 0 - 100-->
