--- a/games.html
+++ b/games.html
@@ -493,7 +493,7 @@
           <button class="game_button" onclick="window.location.href ='400 - 429/zombie-derby-pixel-survival_new.html'">zombie derby pixel survival</button>
 
           <!-- highwayracer games-->
-          <<button class="game_buttion" onclick="window.location.href ='game/18-wheeler-cargo-simulator-2_new.html'">
+          <button class="game_buttion" onclick="window.location.href ='game/18-wheeler-cargo-simulator-2_new.html'">
  18 wheeler cargo simulator 2
 </button>
 <button class="game_buttion" onclick="window.location.href ='game/18-wheeler-cargo-simulator_new.html'">
