--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 <body>
   <div class = "Contanor">
     <h1 class = "hi">Password</h1>
-    <h2 id = "pass"></h2>
+    <h2 id = "pass">Password...</h2>
     <p class = "little">By typing the password you are agreeing to our <a href="tc.html"> Terms & Conditions</a></p>
     <style>
       .little{
