--- a/login.html
+++ b/login.html
@@ -30,9 +30,11 @@
       }
       body{
         text-align: center;
-     }
+      }
+      .Contanor{
+        text-align: center;
+      }
     </style>
-    <iframe style="width: 20%; height: 50vh;"  class="game-iframe" id="game-area" src="https://htmlxm.github.io/h8/flappy-bird-origin" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen></iframe>
   </div>  
   <script src="login.js"></script>
   <script>
