--- a/login.html
+++ b/login.html
@@ -46,13 +46,14 @@
     <div class="popup-content">
         <span class="close-btn" onclick="closePopup()">&times;</span>
         <h2>What new?</h2>
-        <p>We have exciting new features for you. Check them out now!<br> only on version 10.</p>
+        <p><b>Only on version 10.</b></p>
         <ul>
           <li>More games added (324 games)</li>
           <li>New background</li>
           <li>New layout</li>
           <li>Your games added</li>
           <li>Most popler games added</li>
+          <li>Smart seach</li>
         </ul>
     </div>
     <script src="whatnew.js"></script>
