stars of background

--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
   <script src="chech.js"></script>
   <script src="game.js"></script>
 
-<body>
+<body class = "gra">
   <div class="navebar">
     <br>
     <button onclick='window.location.href = "games.html";'><span class="material-symbols-outlined">home</span></button>
