--- a/games.html
+++ b/games.html
@@ -14,14 +14,18 @@
   </head>
   <script src="chech.js"></script>
   <script src="game.js"></script>
+  <script src="background.js"></script>
 
-<body class = "gra">
+<body class = "">
   <div class="navebar">
     <br>
     <button onclick='window.location.href = "games.html";'><span class="material-symbols-outlined">home</span></button>
     <button style = "height: 50px;" onclick='window.location.href = "tc.html";'><span class="material-symbols-outlined">gavel</span></button>
     <button onclick='window.location.href = "report.html";'><span class="material-symbols-outlined">bug_report</span></button>
     <button onclick='window.location.href = "game_list.html";'><span class="material-symbols-outlined">stadia_controller</span></button>
+    <button id = "gra" style="float: right;" onclick='gra()'><span class="material-symbols-outlined">blur_on</span></button>
+    <button id = "dark" style="float: right;" onclick='dark()'><span class="material-symbols-outlined">dark_mode></span></button>
+    <button id = "light" style="float: right;" onclick='light()'><span class="material-symbols-outlined">light_mode</span></button>
     <hr>
 
   </div>
