--- a/report.html
+++ b/report.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <script src="chech.js"></script>
 <script src="website_url_checker.js"></script>
+<script src="background.js"></script>
 <html>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
