--- a/game_list.html
+++ b/game_list.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <script src="buttonan.js"></script>
   <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="style.css">
@@ -782,4 +781,5 @@
   </h4>
 
 </body>
+<script src="background.js"></script>
 </html>
