--- a/report.html
+++ b/report.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <script src="chech.js"></script>
-<script src="website_url_checker.js"></script>
 <html>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -14,9 +13,6 @@
   <button onclick='window.location.href = "games.html";'><span class="material-symbols-outlined">
     home
     </span></button>
-    <button onclick='window.location.href = "search.html";'><span class="material-symbols-outlined">
-    search
-    </span></button>
     <button style = "height: 50px;" onclick='window.location.href = "tc.html";'><span class="material-symbols-outlined">
       gavel
       </span></button>
@@ -26,6 +22,7 @@
     <button style="float: right;" onclick='window.location.href = "logout.html";'><span class="material-symbols-outlined">
     logout
     </span></button>
+    <button onclick='window.location.href = "game_list.html";'><span class="material-symbols-outlined">stadia_controller</span></button>
   <br>
   <hr>
   <br>
