--- a/games.html
+++ b/games.html
@@ -48,10 +48,9 @@
         </script>
         <br>
         <br>
-        <h1>Your games</h1>
+        <h1>Your games</h1> <button onclick="deleatGameY()">Deleat</button>
         <hr>
         <div id="visitedPages"></div>
-        
         <br>
         <br>
         <h1>Most played Games</h1>
