--- a/games.html
+++ b/games.html
@@ -48,7 +48,7 @@
         </script>
         <br>
         <br>
-        <h1>Your games</h1> <button onclick="deleatGameY()">Deleat</button>
+        <h1>Your games  <a href="#" id = "Deleat">Deleat</a></h1>
         <hr>
         <div id="visitedPages"></div>
         <br>
