--- a/games.html
+++ b/games.html
@@ -48,7 +48,7 @@
         </script>
         <br>
         <br>
-        <h1>Your games  <a href="#" id = "Deleat">Deleat</a></h1>
+        <h1>Your games  <button onclick="deleatGameY()"><span class="material-symbols-outlined">delete</span></button></h1>
         <hr>
         <div id="visitedPages"></div>
         <br>
