--- a/login.html
+++ b/login.html
@@ -45,16 +45,8 @@
   <div id="popup-container" class="popup-container">
     <div class="popup-content">
         <span class="close-btn" onclick="closePopup()">&times;</span>
-        <h2>What new?</h2>
-        <p><b>Only on version 10.</b></p>
-        <ul>
-          <li>More games added (324 games)</li>
-          <li>New background</li>
-          <li>New layout</li>
-          <li>Your games added</li>
-          <li>Most popler games added</li>
-          <li>Smart seach</li>
-        </ul>
+        <h1>We Now have 575 games</h1>
+        <p>Please report any that dont work</p>
     </div>
     <script src="whatnew.js"></script>
 </div>
